XXXX-XX-XX  Version 0.1.2

    Issue https://github.com/maratbn/LoginRequirePress/issues/3:  Filtering-out login-requiring
    posts from search result page listings when the user is not logged in.

    Fixed issue https://github.com/maratbn/LoginRequirePress/issues/2:  Added file 'REQUIREMENTS'.

    Minor improvement to plugin WordPress description meta field.


2015-02-05  Version 0.1.1

    Various documentation improvement.


2015-02-01  Version 0.1.0

    Initial release.