@@ -36,8 +36,10 @@ Overview:
   Plugin will still allow unauthenticated downloading of site's feeds, but
   will filter out all login-requiring posts from the feed listings.
 
-  Plugin will filter out login-requiring posts from search result page
-  listings when the user is not logged in.
+  Plugin will protect the titles and contents of login-requiring posts in
+  search result page listings when the user is not logged in.  The titles /
+  contents will be replaced by text "[Post title / content protected by
+  LoginRequirePress.  Login to see the title / content.]"
 
 Technical summary:
 
@@ -45,5 +47,6 @@ Technical summary:
   redirect unauthenticated client browsers to the site's login page from any
   non-feed and non-search-results page upon detecting any login-requiring post,
   and by hooking-in another special logic into the filter 'posts_results' to
-  filter out all login-requiring posts from all feed page listings and search
-  result page listings.
+  filter out all login-requiring posts from all feed page listings, and to
+  protect the titles and contents of login-requiring posts in search result
+  page listings.
